[project]
name = "morpho-stress"
version = "1.1.0"
description = "Liquidity stress testing framework for Morpho Blue isolated lending markets"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "PA" }]

dependencies = [
    # On-chain
    "web3>=7.0",
    "eth-utils>=4.0",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "pandera>=0.20",
    # HTTP
    "httpx>=0.27",
    "tenacity>=9.0",
    # Config
    "pydantic>=2.7",
    "pyyaml>=6.0",
    # Logging / CLI
    "structlog>=24.1",
    "click>=8.1",
    # Modeling
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "matplotlib>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET", "ARG"]
ignore = ["E501"]  # handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_generics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "rpc: integration tests requiring an RPC endpoint",
    "subgraph: integration tests requiring subgraph access",
    "slow: tests that take > 5s",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morpho_stress"]
